--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>shag.lol 😁 bounce</title>
+    <title>shag</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="😁😁😁">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😁</text></svg>">
     <style>
       :root { color-scheme: light dark; }
       html, body { height: 100%; margin: 0; }
