--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>shag</title>
+    <title>shag.lol 😁 bounce</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="😁😁😁">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😁</text></svg>">
     <style>
       :root { color-scheme: light dark; }
       html, body { height: 100%; margin: 0; }
@@ -32,18 +30,43 @@
       }
       #starter {
         font-size: 96px;
-        cursor: pointer;
+        cursor: default;
         user-select: none;
         z-index: 10;
       }
+      #counter {
+        position: fixed;
+        right: 12px;
+        bottom: 10px;
+        font-size: 14px;
+        line-height: 1;
+        opacity: 0;
+        transition: opacity 180ms ease;
+        z-index: 20;
+        user-select: none;
+      }
+      .dottext {
+        font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace;
+        letter-spacing: 2px;
+        color: CanvasText;
+        text-shadow:
+          0 0 0 CanvasText,
+          0.06em 0 CanvasText,
+          0.12em 0 CanvasText,
+          0.18em 0 CanvasText;
+        filter: contrast(1.1) saturate(1);
+      }
       @media (prefers-reduced-motion: reduce) {
         .emoji { transition: none !important; }
+        #counter { transition: none !important; }
       }
     </style>
   </head>
   <body>
-    <div id="starter" aria-label="Spawn bouncing emojis" role="button" tabindex="0">😁</div>
+    <div id="starter" aria-label="shag.lol">😁</div>
     <div id="canvas" aria-hidden="true"></div>
+    <div id="counter" class="dottext" aria-live="polite" aria-atomic="true" role="status">0</div>
+
     <script>
       const COUNT = 100;
       const SIZE = 32;
@@ -55,42 +78,41 @@
       let lastTs = null;
       let bounds = { w: window.innerWidth, h: window.innerHeight };
       let running = false;
+      let activated = false;
 
       const starter = document.getElementById('starter');
       const canvas = document.getElementById('canvas');
+      const counter = document.getElementById('counter');
 
-      function rand(min, max) {
-        return Math.random() * (max - min) + min;
-      }
+      function rand(min, max) { return Math.random() * (max - min) + min; }
+      function updateCounter() { counter.textContent = String(emojis.length); }
+      function showCounter() { counter.style.opacity = '1'; }
 
       function createEmoji() {
         const el = document.createElement('div');
         el.className = 'emoji';
         el.textContent = '😁';
-
         const x = rand(0, Math.max(0, bounds.w - SIZE));
         const y = rand(0, Math.max(0, bounds.h - SIZE));
-
         const angle = rand(0, Math.PI * 2);
         const speed = rand(MIN_SPEED, MAX_SPEED);
         const vx = Math.cos(angle) * speed;
         const vy = Math.sin(angle) * speed;
-
         canvas.appendChild(el);
         el.style.transform = `translate(${x}px, ${y}px)`;
-
         return { el, x, y, vx, vy, size: SIZE };
       }
 
-      function spawn() {
+      function spawnN(n) {
         const prefersReduced = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
-        for (let i = 0; i < COUNT; i++) {
+        const startIndex = emojis.length;
+        for (let i = 0; i < n; i++) {
           const e = createEmoji();
           emojis.push(e);
           if (prefersReduced) {
             const cols = Math.max(1, Math.floor(bounds.w / (SIZE + 8)));
-            const row = Math.floor(i / cols);
-            const col = i % cols;
+            const row = Math.floor((startIndex + i) / cols);
+            const col = (startIndex + i) % cols;
             e.x = col * (SIZE + 8) + 8;
             e.y = row * (SIZE + 8) + 8;
             e.vx = 0;
@@ -98,6 +120,7 @@
             e.el.style.transform = `translate(${e.x}px, ${e.y}px)`;
           }
         }
+        updateCounter();
         if (!prefersReduced) start();
       }
 
@@ -140,33 +163,47 @@
           e.el.style.transform = `translate(${e.x}px, ${e.y}px)`;
         }
       }
-
       window.addEventListener('resize', onResize);
 
       function activate() {
+        if (activated) return;
+        activated = true;
         starter.style.display = 'none';
         canvas.style.pointerEvents = 'none';
-        spawn();
+        showCounter();
+        spawnN(COUNT);
       }
 
-      starter.addEventListener('click', activate);
-      starter.addEventListener('keydown', (e) => {
-        if (e.key === 'Enter' || e.key === ' ') {
-          e.preventDefault();
-          activate();
-        }
+      const KONAMI = ['ArrowUp','ArrowUp','ArrowDown','ArrowDown','ArrowLeft','ArrowRight','ArrowLeft','ArrowRight','b','a'];
+      let keys = [];
+      window.addEventListener('keydown', (e) => {
+        const k = e.key.length === 1 ? e.key.toLowerCase() : e.key;
+        keys.push(k);
+        if (keys.length > KONAMI.length) keys.shift();
+        const match = KONAMI.every((code, i) => code === keys[i]);
+        if (match) activate();
+      });
+
+      let lastClick = 0;
+      starter.addEventListener('click', () => {
+        const now = performance.now();
+        if (now - lastClick < 300) activate();
+        lastClick = now;
       });
 
       document.addEventListener('click', (e) => {
-        if (starter.style.display !== 'none') return;
+        if (!activated) return;
         const burst = 10;
+        const prefersReduced = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
         for (let i = 0; i < burst; i++) {
           const obj = createEmoji();
           obj.x = (e.clientX || bounds.w / 2) - SIZE / 2;
           obj.y = (e.clientY || bounds.h / 2) - SIZE / 2;
+          obj.el.style.transform = `translate(${obj.x}px, ${obj.y}px)`;
           emojis.push(obj);
         }
-        if (!running && !window.matchMedia('(prefers-reduced-motion: reduce)').matches) start();
+        updateCounter();
+        if (!running && !prefersReduced) start();
       });
 
       document.addEventListener('visibilitychange', () => {
