--- a/index.html
+++ b/index.html
@@ -29,12 +29,26 @@
         line-height: 1;
         user-select: none;
         will-change: transform;
+        width: 32px;
+        height: 32px;
+      }
+      .emoji svg {
+        width: 100%;
+        height: 100%;
+        fill: #6366f1;
       }
       #starter {
         font-size: 96px;
         cursor: pointer;
         user-select: none;
         z-index: 10;
+        width: 96px;
+        height: 96px;
+      }
+      #starter svg {
+        width: 100%;
+        height: 100%;
+        fill: #6366f1;
       }
       #counter {
         position: fixed;
@@ -61,7 +75,11 @@
     </style>
   </head>
   <body>
-    <div id="starter" aria-label="Spawn bouncing emojis" role="button" tabindex="0">😁</div>
+    <div id="starter" aria-label="Spawn bouncing emojis" role="button" tabindex="0">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"/>
+      </svg>
+    </div>
     <div id="canvas" aria-hidden="true"></div>
     <div id="counter" aria-live="polite" aria-atomic="true" role="status">0</div>
     <script>
@@ -95,7 +113,7 @@
       function createEmoji() {
         const el = document.createElement('div');
         el.className = 'emoji';
-        el.textContent = '😁';
+        el.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"/></svg>';
 
         const x = rand(0, Math.max(0, bounds.w - SIZE));
         const y = rand(0, Math.max(0, bounds.h - SIZE));
@@ -124,7 +142,7 @@
             e.y = row * (SIZE + 8) + 8;
             e.vx = 0;
             e.vy = 0;
-            e.el.style.transform = `translate(${e.x}px, ${e.y}px)`;
+            el.style.transform = `translate(${e.x}px, ${e.y}px)`;
           }
         }
         updateCounter();
