--- a/index.html
+++ b/index.html
@@ -1,227 +1,141 @@
-<!-- filename: index.html -->
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>shag</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="😁😁😁">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😁</text></svg>">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>shag • links</title>
     <style>
-      :root { color-scheme: light dark; }
-      html, body { height: 100%; margin: 0; }
-      body {
-        display: grid;
-        place-items: center;
-        font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-        background: Canvas;
-        color: CanvasText;
-        overflow: hidden;
-      }
-      #canvas {
-        position: fixed;
-        inset: 0;
-        pointer-events: none;
-      }
-      .emoji {
-        position: absolute;
-        font-size: 32px;
-        line-height: 1;
-        user-select: none;
-        will-change: transform;
-        width: 32px;
-        height: 32px;
-      }
-      .emoji svg {
-        width: 100%;
-        height: 100%;
-        fill: #6366f1;
-      }
-      #starter {
-        font-size: 96px;
-        cursor: pointer;
-        user-select: none;
-        z-index: 10;
-        width: 96px;
-        height: 96px;
-      }
-      #starter svg {
-        width: 100%;
-        height: 100%;
-        fill: #6366f1;
-      }
-      #counter {
-        position: fixed;
-        right: 12px;
-        bottom: 10px;
-        font-size: 20px;
-        opacity: 0;
-        transition: opacity 200ms ease;
-        z-index: 20;
-        font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace;
-        letter-spacing: 2px;
-        color: CanvasText;
-        text-shadow:
-          0 0 0 CanvasText,
-          0.06em 0 CanvasText,
-          0.12em 0 CanvasText,
-          0.18em 0 CanvasText;
-        filter: contrast(1.1) saturate(1);
-      }
-      @media (prefers-reduced-motion: reduce) {
-        .emoji { transition: none !important; }
-        #counter { transition: none !important; }
-      }
+        :root {
+            --bg-color: #ffffff;
+            --text-primary: #000000;
+            --text-secondary: #666666;
+            --border-color: #000000;
+            --hover-bg: #f5f5f5;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: var(--bg-color);
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            color: var(--text-primary);
+        }
+
+        .container {
+            text-align: center;
+            padding: 2rem;
+            max-width: 420px;
+            width: 100%;
+        }
+
+        .profile-emoji {
+            font-size: 72px;
+            margin-bottom: 0.5rem;
+            display: block;
+            line-height: 1.2;
+        }
+
+        h1 {
+            font-size: 1.8rem;
+            font-weight: 700;
+            margin: 0 0 0.25rem 0;
+            letter-spacing: -0.02em;
+        }
+
+        p {
+            margin: 0 0 2.5rem 0;
+            color: var(--text-secondary);
+            font-size: 1rem;
+        }
+
+        .links {
+            display: flex;
+            flex-direction: column;
+            gap: 0.8rem;
+        }
+
+        .link-item {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
+            background-color: transparent;
+            border: 1.5px solid var(--border-color);
+            border-radius: 12px;
+            padding: 1rem;
+            color: var(--text-primary);
+            font-weight: 600;
+            font-size: 0.95rem;
+            transition: all 0.2s ease;
+        }
+
+        .link-item:hover {
+            background-color: var(--hover-bg);
+            transform: translateY(-1px);
+        }
+
+        .link-item svg {
+            width: 20px;
+            height: 20px;
+            margin-right: 12px;
+            fill: currentColor;
+        }
+
+        .footer-link {
+            margin-top: 2.5rem;
+            display: inline-block;
+            color: var(--text-secondary);
+            text-decoration: none;
+            font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace;
+            font-size: 0.85rem;
+            border-bottom: 1px solid transparent;
+        }
+
+        .footer-link:hover {
+            border-bottom-color: var(--text-secondary);
+        }
     </style>
-  </head>
-  <body>
-    <div id="starter" aria-label="Spawn bouncing emojis" role="button" tabindex="0">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-        <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"/>
-      </svg>
+</head>
+<body>
+
+    <div class="container">
+        <span class="profile-emoji">😁</span>
+        <h1>shagun</h1>
+        <p>hey there! find me on the internet</p>
+
+        <div class="links">
+            <a href="https://github.com/srivastsh" class="link-item" target="_blank" rel="noopener">
+                <svg viewBox="0 0 16 16"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/></svg>
+                GitHub
+            </a>
+
+            <a href="https://x.com/srivastsh" class="link-item" target="_blank" rel="noopener">
+                <svg viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+                Twitter / X
+            </a>
+
+            <a href="https://linkedin.com/in/srivastsh" class="link-item" target="_blank" rel="noopener">
+                <svg viewBox="0 0 24 24"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 0 1-2.063-2.065 2.064 2.064 0 1 1 2.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
+                LinkedIn
+            </a>
+
+            <a href="https://instagram.com/srivastsh" class="link-item" target="_blank" rel="noopener">
+                <svg viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.011 3.584-.069 4.85c-.148 3.228-1.667 4.771-4.919 4.919-1.266.058-1.644.069-4.85.069s-3.584-.011-4.85-.069c-3.228-.148-4.771-1.667-4.919-4.919C2.175 15.584 2.164 15.204 2.164 12s.011-3.584.069-4.85C2.38 3.922 3.922 2.38 7.15 2.233c1.266-.058 1.645-.069 4.85-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.272 2.695.072 7.053.014 8.333 0 8.741 0 12s.014 3.667.072 4.947c.2 4.358 2.623 6.78 6.981 6.98 1.28.058 1.689.072 4.947.072s3.667-.014 4.947-.072c4.358-.2 6.78-2.623 6.98-6.98.058-1.28.072-1.689.072-4.947s-.014-3.667-.072-4.947c-.2-4.358-2.623-6.78-6.98-6.98C15.667.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zM12 16a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm6.406-11.845a1.44 1.44 0 1 0 0 2.881 1.44 1.44 0 0 0 0-2.881z"/></svg>
+                Instagram
+            </a>
+
+            <a href="mailto:shagun@shag.lol" class="link-item">
+                <svg viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
+                Email
+            </a>
+        </div>
+
+        <a href="https://shag.lol" class="footer-link">shag.lol</a>
     </div>
-    <div id="canvas" aria-hidden="true"></div>
-    <div id="counter" aria-live="polite" aria-atomic="true" role="status">0</div>
-    <script>
-      const COUNT = 100;
-      const SIZE = 32;
-      const MIN_SPEED = 100;
-      const MAX_SPEED = 300;
 
-      const emojis = [];
-      let rafId = null;
-      let lastTs = null;
-      let bounds = { w: window.innerWidth, h: window.innerHeight };
-      let running = false;
-
-      const starter = document.getElementById('starter');
-      const canvas = document.getElementById('canvas');
-      const counter = document.getElementById('counter');
-
-      function rand(min, max) {
-        return Math.random() * (max - min) + min;
-      }
-
-      function updateCounter() {
-        counter.textContent = String(emojis.length);
-      }
-
-      function showCounter() {
-        counter.style.opacity = '1';
-      }
-
-      function createEmoji() {
-        const el = document.createElement('div');
-        el.className = 'emoji';
-        el.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"/></svg>';
-
-        const x = rand(0, Math.max(0, bounds.w - SIZE));
-        const y = rand(0, Math.max(0, bounds.h - SIZE));
-
-        const angle = rand(0, Math.PI * 2);
-        const speed = rand(MIN_SPEED, MAX_SPEED);
-        const vx = Math.cos(angle) * speed;
-        const vy = Math.sin(angle) * speed;
-
-        canvas.appendChild(el);
-        el.style.transform = `translate(${x}px, ${y}px)`;
-
-        return { el, x, y, vx, vy, size: SIZE };
-      }
-
-      function spawn(n) {
-        const prefersReduced = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
-        for (let i = 0; i < n; i++) {
-          const e = createEmoji();
-          emojis.push(e);
-          if (prefersReduced) {
-            const cols = Math.max(1, Math.floor(bounds.w / (SIZE + 8)));
-            const row = Math.floor(i / cols);
-            const col = i % cols;
-            e.x = col * (SIZE + 8) + 8;
-            e.y = row * (SIZE + 8) + 8;
-            e.vx = 0;
-            e.vy = 0;
-            el.style.transform = `translate(${e.x}px, ${e.y}px)`;
-          }
-        }
-        updateCounter();
-        if (!prefersReduced) start();
-      }
-
-      function start() {
-        if (running) return;
-        running = true;
-        lastTs = performance.now();
-        rafId = requestAnimationFrame(tick);
-      }
-
-      function stop() {
-        running = false;
-        if (rafId) cancelAnimationFrame(rafId);
-        rafId = null;
-      }
-
-      function tick(ts) {
-        const dt = Math.min(0.05, (ts - lastTs) / 1000);
-        lastTs = ts;
-        const w = bounds.w;
-        const h = bounds.h;
-        for (const e of emojis) {
-          e.x += e.vx * dt;
-          e.y += e.vy * dt;
-          if (e.x <= 0) { e.x = 0; e.vx = Math.abs(e.vx); }
-          if (e.x + e.size >= w) { e.x = w - e.size; e.vx = -Math.abs(e.vx); }
-          if (e.y <= 0) { e.y = 0; e.vy = Math.abs(e.vy); }
-          if (e.y + e.size >= h) { e.y = h - e.size; e.vy = -Math.abs(e.vy); }
-          e.el.style.transform = `translate(${e.x}px, ${e.y}px)`;
-        }
-        rafId = requestAnimationFrame(tick);
-      }
-
-      function onResize() {
-        bounds.w = window.innerWidth;
-        bounds.h = window.innerHeight;
-        for (const e of emojis) {
-          e.x = Math.min(Math.max(0, e.x), Math.max(0, bounds.w - e.size));
-          e.y = Math.min(Math.max(0, e.y), Math.max(0, bounds.h - e.size));
-          e.el.style.transform = `translate(${e.x}px, ${e.y}px)`;
-        }
-      }
-      window.addEventListener('resize', onResize);
-
-      function activate() {
-        starter.style.display = 'none';
-        canvas.style.pointerEvents = 'none';
-        showCounter();
-        spawn(COUNT);
-      }
-
-      starter.addEventListener('click', activate);
-      starter.addEventListener('keydown', (e) => {
-        if (e.key === 'Enter' || e.key === ' ') {
-          e.preventDefault();
-          activate();
-        }
-      });
-
-      document.addEventListener('click', (e) => {
-        if (starter.style.display !== 'none') return;
-        const burst = 10;
-        for (let i = 0; i < burst; i++) {
-          const obj = createEmoji();
-          obj.x = (e.clientX || bounds.w / 2) - SIZE / 2;
-          obj.y = (e.clientY || bounds.h / 2) - SIZE / 2;
-          emojis.push(obj);
-        }
-        updateCounter();
-        if (!running && !window.matchMedia('(prefers-reduced-motion: reduce)').matches) start();
-      });
-
-      document.addEventListener('visibilitychange', () => {
-        if (document.hidden) stop();
-        else if (emojis.length && !window.matchMedia('(prefers-reduced-motion: reduce)').matches) start();
-      });
-    </script>
-  </body>
+</body>
 </html>
