--- a/me/index.html
+++ b/me/index.html
@@ -6,10 +6,9 @@
     <title>shag • links</title>
     <style>
         :root {
-            --main-bg: #f0f2f5;
-            --glass-bg: rgba(255, 255, 255, 0.65);
+            --main-bg: #f8f9fa;
+            --glass-bg: rgba(255, 255, 255, 0.7);
             --glass-border: rgba(255, 255, 255, 0.4);
-            --glass-shadow: 0 8px 32px rgba(0, 0, 0, 0.05);
             --text-primary: #000000;
             --text-secondary: #666666;
             --icon-border: #e0e0e0;
@@ -17,13 +16,12 @@
         }
         @media (prefers-color-scheme: dark) {
             :root {
-                --main-bg: #0d1117;
-                --glass-bg: rgba(22, 27, 34, 0.7);
-                --glass-border: rgba(255, 255, 255, 0.08);
-                --glass-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
+                --main-bg: #000000;
+                --glass-bg: rgba(28, 28, 30, 0.7);
+                --glass-border: rgba(255, 255, 255, 0.1);
                 --text-primary: #ffffff;
                 --text-secondary: #a1a1a1;
-                --icon-border: #30363d;
+                --icon-border: #38383a;
                 --hover-bg: rgba(255, 255, 255, 0.1);
             }
         }
@@ -31,30 +29,26 @@
             margin: 0; padding: 20px; background-color: var(--main-bg);
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
             display: flex; justify-content: center; align-items: center; min-height: 100vh;
-            color: var(--text-primary); transition: background-color 0.3s ease;
+            transition: background-color 0.3s ease;
         }
         .container {
             text-align: center; padding: 3rem 2rem; max-width: 400px; width: 100%;
-            border-radius: 24px; background-color: var(--glass-bg);
+            border-radius: 28px; background-color: var(--glass-bg);
             -webkit-backdrop-filter: blur(20px); backdrop-filter: blur(20px);
-            border: 1px solid var(--glass-border); box-shadow: var(--glass-shadow);
+            border: 1px solid var(--glass-border); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
         }
         .profile-emoji { font-size: 72px; margin-bottom: 0.5rem; display: block; line-height: 1.2; }
-        h1 { font-size: 1.8rem; font-weight: 700; margin: 0 0 0.25rem 0; letter-spacing: -0.02em; }
-        p { margin: 0 0 2.5rem 0; color: var(--text-secondary); font-size: 1rem; }
+        h1 { font-size: 1.8rem; font-weight: 700; margin: 0; color: var(--text-primary); }
+        p { margin: 0.5rem 0 2.5rem 0; color: var(--text-secondary); font-size: 1rem; }
         .links { display: flex; justify-content: center; flex-wrap: wrap; gap: 1rem; }
         .link-item {
             display: flex; align-items: center; justify-content: center;
             border: 1.5px solid var(--icon-border); border-radius: 50%;
-            width: 56px; height: 56px; color: var(--text-primary);
-            transition: all 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94); text-decoration: none;
+            width: 56px; height: 56px; color: var(--text-primary); transition: all 0.2s ease;
         }
-        .link-item:hover { background-color: var(--hover-bg); border-color: var(--text-primary); transform: scale(1.05); }
+        .link-item:hover { background-color: var(--hover-bg); transform: translateY(-2px); border-color: var(--text-primary); }
         .link-item svg { width: 24px; height: 24px; fill: currentColor; }
-        .footer-link {
-            margin-top: 3rem; display: inline-block; color: var(--text-secondary);
-            text-decoration: none; font-family: ui-monospace, monospace; font-size: 0.85rem;
-        }
+        .footer-link { margin-top: 3rem; display: inline-block; color: var(--text-secondary); text-decoration: none; font-family: ui-monospace, monospace; font-size: 0.85rem; }
     </style>
 </head>
 <body>
