--- a/me/index.html
+++ b/me/index.html
@@ -7,15 +7,17 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😁</text></svg>">
     <style>
         :root {
-            --glass: rgba(255, 255, 255, 0.5);
+            --glass-card: rgba(255, 255, 255, 0.75);
+            --glass-item: rgba(255, 255, 255, 0.4);
             --text-main: #1d1d1f;
-            --text-sub: #424245;
-            --border: rgba(255, 255, 255, 0.3);
+            --text-sub: #6e6e73;
+            --border: rgba(255, 255, 255, 0.5);
         }
 
         @media (prefers-color-scheme: dark) {
             :root {
-                --glass: rgba(15, 15, 18, 0.45);
+                --glass-card: rgba(20, 20, 25, 0.7);
+                --glass-item: rgba(255, 255, 255, 0.05);
                 --text-main: #ffffff;
                 --text-sub: #a1a1a6;
                 --border: rgba(255, 255, 255, 0.1);
@@ -30,19 +32,30 @@
             display: flex; justify-content: center; align-items: center;
             font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", sans-serif;
             background-size: cover; background-position: center;
-            color: var(--text-main); overflow: hidden;
+            overflow: hidden;
             transition: background-image 1s ease-in-out;
         }
 
+        /* The Blurry Background Layer */
+        .bg-blur {
+            position: fixed; top: 0; left: 0; right: 0; bottom: 0;
+            background-image: inherit; background-size: cover; background-position: center;
+            filter: blur(60px) brightness(0.9); transform: scale(1.1);
+            z-index: -1;
+        }
+
         .main-card {
-            width: 90%; max-width: 340px;
-            background: var(--glass);
-            -webkit-backdrop-filter: blur(45px); backdrop-filter: blur(45px);
-            border: 1px solid var(--border); border-radius: 40px;
-            padding: 30px;
-            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
-            display: flex; flex-direction: column; gap: 32px;
-            animation: fadeUp 0.8s ease-out forwards;
+            width: 100%; height: 100%; /* Fullscreen Mobile */
+            max-width: 400px; max-height: 800px; /* Desktop Containment */
+            background: var(--glass-card);
+            -webkit-backdrop-filter: blur(20px); backdrop-filter: blur(20px);
+            border: 1px solid var(--border);
+            display: flex; flex-direction: column; padding: 24px; gap: 20px;
+            animation: fadeUp 0.8s ease-out;
+        }
+
+        @media (min-width: 600px) {
+            .main-card { height: auto; border-radius: 44px; box-shadow: 0 40px 100px rgba(0,0,0,0.2); }
         }
 
         .card-header {
@@ -50,39 +63,51 @@
             font-size: 0.85rem; font-weight: 600; opacity: 0.8;
         }
 
-        .card-greeting { text-align: center; }
-        .card-greeting h1 { font-size: 1.6rem; font-weight: 600; margin: 0; letter-spacing: -0.02em; }
-        .card-greeting p { font-size: 0.95rem; margin: 8px 0 0 0; color: var(--text-sub); }
+        /* The Crisp "Normal" Image in Card */
+        .hero-img {
+            width: 100%; height: 220px;
+            background-size: cover; background-position: center;
+            border-radius: 28px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+            transition: background-image 1s ease-in-out;
+        }
+
+        .card-greeting { text-align: center; margin: 10px 0; }
+        .card-greeting h1 { font-size: 1.8rem; font-weight: 700; margin: 0; letter-spacing: -0.02em; }
+        .card-greeting p { font-size: 1rem; margin: 6px 0 0 0; color: var(--text-sub); }
 
         .dock {
             display: grid; grid-template-columns: repeat(2, 1fr); gap: 16px;
+            margin-top: auto; padding-bottom: 20px;
         }
 
         .dock-item {
-            background: rgba(255, 255, 255, 0.1);
+            background: var(--glass-item);
             border: 1px solid var(--border); border-radius: 28px;
-            aspect-ratio: 1 / 1; /* Perfect Square icons */
+            aspect-ratio: 1 / 1;
             display: flex; align-items: center; justify-content: center;
             text-decoration: none; color: inherit;
             transition: all 0.2s ease;
         }
 
         .dock-item:active { transform: scale(0.92); background: rgba(255, 255, 255, 0.2); }
-        .dock-item svg { width: 32px; height: 32px; fill: var(--text-main); }
+        .dock-item svg { width: 34px; height: 34px; fill: var(--text-main); }
 
-        /* Pulse Animation */
         .pulse { animation: pulse 3s infinite ease-in-out; }
-        @keyframes pulse { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.12); } }
-        @keyframes fadeUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+        @keyframes pulse { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.1); } }
+        @keyframes fadeUp { from { opacity: 0; transform: translateY(30px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
 <body id="dynamic-body">
 
+    <div class="bg-blur"></div>
+
     <div class="main-card">
         <div class="card-header">
             <div id="current-date">---</div>
-            <div style="font-weight: 700; letter-spacing: 1px;">SS</div>
+            <div style="font-weight: 700; letter-spacing: 1px; color: var(--text-main);">SS</div>
         </div>
+
+        <div class="hero-img" id="inner-hero"></div>
 
         <div class="card-greeting">
             <h1 id="time-greet">Loading...</h1>
@@ -111,6 +136,7 @@
             const hrs = now.getHours();
             const greet = document.getElementById('time-greet');
             const body = document.getElementById('dynamic-body');
+            const innerHero = document.getElementById('inner-hero');
             const dateEl = document.getElementById('current-date');
             const weatherEl = document.getElementById('weather-text');
 
@@ -123,7 +149,9 @@
             else { message = "Good Night"; bg = "../night.jpg"; }
 
             greet.innerText = message;
-            body.style.backgroundImage = `url('${bg}')`;
+            const url = `url('${bg}')`;
+            body.style.backgroundImage = url;
+            innerHero.style.backgroundImage = url;
 
             try {
                 const res = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=37.7749&longitude=-122.4194&current_weather=true&temperature_unit=fahrenheit`);
